font awesome icon changes and added interpolation for some icons

--- a/app/templates/_cart_truck_icon.hbs
+++ b/app/templates/_cart_truck_icon.hbs
@@ -1,4 +1,4 @@
-<i class="cart-icon">{{fa-icon 'truck' }}</i>
+<i class="fa cart-icon">{{fa-icon 'truck' }}</i>
 <span class="cart unread">
   <div class="unread_length">{{cartLength}}</div>
 </span>
