--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -4,7 +4,7 @@
   </section>
   <section class="right-small" style="float: right;">
     {{#link-to "search_goods"}}
-    <i>{{fa-icon 'search'}}</i>
+    <i class="fa">{{fa-icon 'search'}}</i>
     {{/link-to}}
   </section>
 </nav>
@@ -12,7 +12,7 @@
   <div class="row home_section show-for-small small light">
     <div class="small-12 columns">
       <label class="form-label browse-label">
-        <i>{{fa-icon 'exclamation-triangle'}}</i>
+        <i class="fa">{{fa-icon 'exclamation-triangle'}}</i>
         {{t 'browse.intro_text'}}
         {{#link-to "faq" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}
       </label>
