--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -1,6 +1,6 @@
 <div class="cart-controls">
   <p id="messageBoxText">
-    <i>{{fa-icon 'truck'}}</i> {{t "cart_content.your_request"}}
+    <i class="fa">{{fa-icon 'truck'}}</i> {{t "cart_content.your_request"}}
   </p>
   <div class="row">
     <div class="small-6 columns">
@@ -40,7 +40,7 @@
         </div>
 
         <div class="small-3 columns remove_link" {{action 'remove' row.record target=cart}}>
-          <i>{{fa-icon 'times'}}</i>
+          <i class="fa">{{fa-icon 'times'}}</i>
           <span>{{t "cart_content.remove"}}</span>
         </div>
       </div>
