--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -34,11 +34,11 @@
         <!-- Browse button -->
         <div class="columns home_section large-6">
           <div class="section_title"> {{ t "home.order_goods.title" }} </div>
-          <div class="section_subtitle small"> <i>{{fa-icon 'check'}}</i> {{ t "home.order_goods.subtitle" }}
+          <div class="section_subtitle small"> <i class="fa">{{fa-icon 'check'}}</i> {{ t "home.order_goods.subtitle" }}
             {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </div>
           {{#link-to "browse"}}
           <div class="button small action">
-            <i>{{fa-icon 'shopping-cart'}}</i> {{ t "home.order_goods.action" }}
+            <i class="fa">{{fa-icon 'shopping-cart'}}</i> {{ t "home.order_goods.action" }}
           </div>
           {{/link-to}}
         </div>
@@ -47,7 +47,7 @@
         <div class="columns home_section large-6">
           <div class="section_title"> {{ t "home.visit.title" }} </div>
           <div class="section_subtitle small">
-            <div><i>{{fa-icon 'check'}}</i> {{ t "home.visit.subtitle" }}
+            <div><i class="fa">{{fa-icon 'check'}}</i> {{ t "home.visit.subtitle" }}
               {{#link-to "about"}}{{t 'home.learn_more'}}{{/link-to}} </div>
           </div>
           {{book-appointment}}
