--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,4 +1,4 @@
 <div>
-  <i>{{fa-icon 'spinner' spin=true}}</i>
+  <i class="fa">{{fa-icon 'spinner' spin=true}}</i>
   {{t "application.loading"}}
 </div>
