--- a/app/templates/no_image.hbs
+++ b/app/templates/no_image.hbs
@@ -1,4 +1,4 @@
 <div class="no_image">
-  <i>{{fa-icon 'camera'}}</i>
+  <i class="fa">{{fa-icon 'camera'}}</i>
   {{t "itemdetail.image_unavailable"}}
 </div>
