--- a/app/templates/order/booking_success.hbs
+++ b/app/templates/order/booking_success.hbs
@@ -32,7 +32,7 @@
           <div class=" custom_radio_buttons small-12 columns booking-success success-submit" align="center"
             for="For HKID">
             <div class="booking-success-state">
-              <span><i>{{fa-icon 'envelope'}}</i></span>
+              <span><i class="fa">{{fa-icon 'envelope'}}</i></span>
               <span class="submit-state">{{model.state}}</span>
             </div>
           </div>
