--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -129,7 +129,7 @@
                         selection=selectedDate
                         placeholder="Date"
                         pattern="[a-zA-Z]{3}\s?[a-zA-Z]{3}\s?[0-9]{1,2}"}}
-              <i class="calender_icon">{{fa-icon 'calender'}}</i>
+              <i class="fa calender_icon">{{fa-icon 'calender'}}</i>
             </div>
           </div>
           {{else}}
@@ -155,7 +155,7 @@
                   {{t 'order.online_order.choose_date'}}
                   {{/if}}
                 </span>
-                <div class="icon">{{fa-icon "calendar"}}</div>
+                <div class="fa icon">{{fa-icon "calendar"}}</div>
               </label>
             </div>
           </div>
