--- a/app/templates/cart_content/_checkout_small_view.hbs
+++ b/app/templates/cart_content/_checkout_small_view.hbs
@@ -1,7 +1,7 @@
 {{#if (is-or screenresize.isSmallScreen screenresize.isMediumScreen)}}
 
 <div class="show_cart_summary" {{action "toggleCartSummary"}}>
-  <i class="cart-icon">{{fa-icon 'truck'}}</i>
+  <i class="fa cart-icon">{{fa-icon 'truck'}}</i>
   {{t 'order.cart_details.cart_summary'}}
 </div>
 
