--- a/app/templates/components/book-appointment.hbs
+++ b/app/templates/components/book-appointment.hbs
@@ -1,13 +1,13 @@
 {{#if session.isLoggedIn}}
 <div class="button book-appointment {{if buttonStyle buttonStyle 'small action' }}"
   {{action "redirectAsPerUserDetails"}}>
-  <i>{{fa-icon 'calendar'}}</i>
+  <i class="fa">{{fa-icon 'calendar'}}</i>
   {{t (if isMyOrdersRoute "home.visit.new_appointment" "home.visit.action")}}
 </div>
 {{else}}
 {{#link-to "login" (query-params bookAppointment=true)}}
 <div class="button book-appointment {{if buttonStyle buttonStyle 'small action' }}">
-  {{ t "home.visit.action" }} <i>{{fa-icon 'calendar'}}</i>
+  {{ t "home.visit.action" }} <i class="fa">{{fa-icon 'calendar'}}</i>
 </div>
 {{/link-to}}
 {{/if}}
