--- a/app/templates/components/small-cart-toggle-view.hbs
+++ b/app/templates/components/small-cart-toggle-view.hbs
@@ -1,9 +1,9 @@
 {{#if (is-or screenresize.isSmallScreen screenresize.isMediumScreen)}}
 
 <div class="show_cart_summary" {{action "toggleCartSummary"}}>
-  <i class="cart-icon">{{fa-icon 'truck'}}</i>
+  <i class="fa cart-icon">{{fa-icon 'truck'}}</i>
   {{t 'order.cart_details.cart_summary'}}
-  <i class="fa {{if showCartSummary 'fa-angle-double-up' 'fa-angle-double-down'}}" aria-hidden="true"></i>
+  <i>{{if showCartSummary 'fa-icon angle-double-up' 'fa-icon angle-double-down'}}</i>
 </div>
 
 {{#if showCartSummary}}
