--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -8,7 +8,7 @@
         <div class="columns browse button-container small-5 large-6 medium-5">
           {{#link-to "browse"}}
           <div class="browse-button button light">
-            <i>{{fa-icon 'shopping-cart'}}</i>
+            <i class="fa">{{fa-icon 'shopping-cart'}}</i>
             {{t 'home.order_goods.action'}}
           </div>
           {{/link-to}}
