--- a/app/templates/order/_order_block.hbs
+++ b/app/templates/order/_order_block.hbs
@@ -1,7 +1,7 @@
 <div class="order_block">
   <div class="row order_header">
     <div class="small-4 medium-0 large-4 columns order_transport">
-      <i class="fa fa-lg fa-{{ order.transportIcon }}"></i> {{ order.transportLabel }}
+      <i class="fa">{{fa-icon order.transportIcon}}</i> {{ order.transportLabel }}
     </div>
 
     <div class="small-3 columns order_code">
@@ -10,14 +10,14 @@
 
     <div class="small-5 medium-9 large-5 columns order_state">
       <div class="order_state_icon {{ order.state }}">
-        <i class="fa fa-{{ order.stateIcon }}"></i>
+        <i class="fa">{{fa-icon order.stateIcon}}</i>
       </div>
       <div class="order_state_text"> {{ t (concat "my_orders." order.state) }} </div>
     </div>
   </div>
   <div class="row order_body">
     <div class="arrow-right">
-      <i>{{fa-icon 'chevron-right'}}</i>
+      <i class="fa">{{fa-icon 'chevron-right'}}</i>
     </div>
 
     {{#if (is-and order.orderTransport order.orderTransport.scheduledAt)}}
