--- a/app/templates/order/_order_header.hbs
+++ b/app/templates/order/_order_header.hbs
@@ -1,15 +1,13 @@
-<div class="row order_header">
-  <div class="small-4 medium-0 large-4 columns order_transport"> 
-    <i class="fa fa-lg fa-{{ order.transportIcon }}"></i> {{ order.transportLabel }}
+<div class="row order_header 123">
+  <div class="small-4 medium-0 large-4 columns order_transport">
+    <i class="fa">{{fa-icon order.transportIcon}}</i> {{ order.transportLabel }}
   </div>
-
   <div class="small-3 columns order_code">
     {{order.code}}
   </div>
-
   <div class="small-5 medium-9 large-5 columns order_state">
     <div class="order_state_icon {{ order.state }}">
-      <i class="fa fa-{{ order.stateIcon }}"></i>
+      <i class="fa">{{fa-icon order.stateIcon}}</i>
     </div>
     <div class="order_state_text"> {{ t (concat "my_orders." order.state) }} </div>
   </div>
