--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -1,5 +1,5 @@
 {{#if isMobileApp}}
-  {{scroll-to-bottom customClass="goods-detail-info-scroll-arrow"}}
+{{scroll-to-bottom customClass="goods-detail-info-scroll-arrow"}}
 {{/if}}
 <div class="row">
   <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
@@ -10,17 +10,18 @@
             <section class="left-large inline-content">
               {{fa-icon "angle-left"}}
               {{#if fromClientInformation}}
-                {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else if (is-equal backLinkPath 'order.client_information')}}
-                {{#link-to backLinkPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#link-to backLinkPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
               {{else}}
-                {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
+              {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
               {{/if}}
             </section>
             <section class="middle tab-bar-section">
               <h1 class="title"> {{t "order.goods_details.title"}} </h1>
             </section>
-            <section {{action "cancelBookingPopUp"}} id="cancel-booking-link" class="right-large inline-content right-align">
+            <section {{action "cancelBookingPopUp"}} id="cancel-booking-link"
+              class="right-large inline-content right-align">
               {{t "cancel"}}
             </section>
           </nav>
@@ -28,32 +29,37 @@
         <br>
         <section class="main-section client-information large-10 large-offset-1 medium-10 medium-offset-1 columns">
           <div class="small-12 columns id-confidential-text goods_details">
-            {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}} <a class="crossroads_email" href="mailto:local@crossroads.org.hk"> local@crossroads.org.hk </a> {{t "order.goods_details.info_3"s}}
+            {{t "order.goods_details.info_1"}} <br> {{t "order.goods_details.info_2"}} <a class="crossroads_email"
+              href="mailto:local@crossroads.org.hk"> local@crossroads.org.hk </a> {{t "order.goods_details.info_3"s}}
           </div>
         </section>
         <br>
-        <section class="main-section client-information request-add-remove-section medium-10 medium-offset-1 large-10 large-offset-1 columns">
+        <section
+          class="main-section client-information request-add-remove-section medium-10 medium-offset-1 large-10 large-offset-1 columns">
           {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
-            {{#each sortedGcRequests as |req index|}}
-              {{add-request id=index order=model request=req num=index}}
-            {{/each}}
-             <div class='row req-more-goods'>
-              <div class='large-4 columns small-7 small-offset-2 request-more link-blue add_package_link add_more_request' {{action "addRequest" on="click"}}>
-                {{t "order.goods_details.request_more"}}
-              </div>
-              <div class='small-2 columns icon-center add_more_request'>
-                <i class='fa fa-plus-circle fa-2x icon' {{action "addRequest" on="click"}}></i>
-              </div>
-              <div class='small-2 columns'>&nbsp;</div>
+          {{#each sortedGcRequests as |req index|}}
+          {{add-request id=index order=model request=req num=index}}
+          {{/each}}
+          <div class='row req-more-goods'>
+            <div class='large-4 columns small-7 small-offset-2 request-more link-blue add_package_link add_more_request'
+              {{action "addRequest" on="click"}}>
+              {{t "order.goods_details.request_more"}}
             </div>
-            <br>
-            <div class="row">
-              <div class="small-11 columns">
-                {{#if hasNoGcRequests}}<p align="center" class="no-gc-req-error">{{t "order.goods_details.no_goods_error"}}</p>{{/if}}
-                <button {{action 'submit' target=form}} id="goods-details-submit" disabled={{hasNoGcRequests}} class="button expand expand_button">{{t "continue"}}</button>
-              </div>
-              <div class='small-1 columns'>&nbsp;</div>
+            <div class='small-2 columns icon-center add_more_request'>
+              <i class='fa icon' {{action "addRequest" on="click"}}>{{fa-icon 'plus-circle' size='2x'}}</i>
             </div>
+            <div class='small-2 columns'>&nbsp;</div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="small-11 columns">
+              {{#if hasNoGcRequests}}<p align="center" class="no-gc-req-error">
+                {{t "order.goods_details.no_goods_error"}}</p>{{/if}}
+              <button {{action 'submit' target=form}} id="goods-details-submit" disabled={{hasNoGcRequests}}
+                class="button expand expand_button">{{t "continue"}}</button>
+            </div>
+            <div class='small-1 columns'>&nbsp;</div>
+          </div>
           {{/validatable-form}}
         </section>
       </div>
