--- a/app/templates/search_goods.hbs
+++ b/app/templates/search_goods.hbs
@@ -17,7 +17,7 @@
               value=searchText }}
 
             {{#if hasSearchText}}
-            <i {{action "clearSearch"}}>{{fa-icon 'times-circle'}}</i>
+            <i class="fa" {{action "clearSearch"}}>{{fa-icon 'times-circle'}}</i>
             {{/if}}
           </div>
           <div class=" large-1 medium-1 columns"></div>
