--- a/app/templates/search_organisation.hbs
+++ b/app/templates/search_organisation.hbs
@@ -17,7 +17,7 @@
             disabled=false}}
 
           {{#if hasSearchText}}
-          <i {{action "clearSearch"}}>{{fa-icon 'times-circle'}}</i>
+          <i class="fa" {{action "clearSearch"}}>{{fa-icon 'times-circle'}}</i>
           {{/if}}
         </div>
         <div class=" large-1 columns"></div>
