removed unwanted changes and logs

--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -49,7 +49,7 @@
                     {{/if}}
 
                     <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.organisation_warning"}}
+                      {{fa-icon 'exclamation-triangle'}}&nbsp;&nbsp;{{t "account.organisation_warning"}}
                     </div>
                     {{/form-control}}
                   </div>
@@ -76,7 +76,7 @@
                       {{input type="text" value=model.user.lastName id="lastName" classNames="number_input center_align_placeholder" required='true'}}
                     </div>
                     <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.user_info"}}
+                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.user_info"}}
                     </div>
                     {{/form-control}}
                   </div>
@@ -92,7 +92,7 @@
                       {{/if}}
                     </div>
                     <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.position_warning"}}
+                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.position_warning"}}
                     </div>
                     {{/form-control}}
                   </div>
@@ -121,7 +121,7 @@
                       {{/if}}
                     </div>
                     <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.email_warning"}}
+                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.email_warning"}}
                     </div>
                     {{/form-control}}
                   </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class='row'>
                       <div class="small-12 columns input-error warning_empty">
-                        {{fa-icon "warning"}}&nbsp;&nbsp; {{t 'account.mobile_warning'}}
+                        {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp; {{t 'account.mobile_warning'}}
                       </div>
                     </div>
                     {{/form-control}}
@@ -179,7 +179,7 @@
                       {{/if}}
                     </div>
                     <div class="large-12 medium-12 small-12 columns input-error warning_empty">
-                      {{fa-icon "warning"}}&nbsp;&nbsp; {{t 'account.preffered_contact_warning'}}
+                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp; {{t 'account.preffered_contact_warning'}}
                     </div>
                     {{/form-control}}
                   </div>
