--- a/app/templates/orders/booking.hbs
+++ b/app/templates/orders/booking.hbs
@@ -54,7 +54,7 @@
             <div class="row state-description">
               <div class="state-container">
                 <div class="state-title">
-                  <i class="fa fa-lg">{{fa-icon 'order.stateIcon'}}</i>
+                  <i class="fa fa-lg">{{fa-icon order.stateIcon}}</i>
                   {{ t (concat "my_orders.details.state_titles." order.state) default=order.state }}
                 </div>
                 <div class="state-text">
