--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -1,13 +1,16 @@
-.request-purpose, .client-information {
-  .button{
+.request-purpose,
+.client-information {
+  .button {
     margin-top: 1rem;
   }
+
   .input-error {
     background: #ED4C4E !important;
     color: white;
     padding: 0.2rem;
     display: none;
     padding-bottom: 0.25rem !important;
+
     @media #{$small-only} {
       font-size: 0.65rem;
       width: 97%;
@@ -30,29 +33,34 @@
   }
 
   .form__control.form__control--error .input-error {
-    .input-error{
+    .input-error {
       display: block !important;
     }
   }
+
   .purpose {
     .custom_radio_buttons {
-      @media #{$small-only}{
+      @media #{$small-only} {
         width: 100% !important;
         margin-left: -10px;
       }
+
       border: 1px solid;
       padding: .4rem;
       margin-top: 1rem;
       height: 2.7rem;
+
       // border: 1px solid white !important;
       input[type=radio] {
         margin: 0 0 0 0px;
       }
+
       label {
         font-size: 0.8rem !important;
         margin-top: 0.4rem !important;
       }
     }
+
     @media #{$small-only} {
       font-size: 0.65rem;
       margin-left: 0.3rem;
@@ -72,15 +80,18 @@
       padding: .4rem;
       margin-top: 1rem;
       height: 2.7rem;
+
       // border: 1px solid white !important;
       input[type=radio] {
         margin: 0 0 0 0px;
       }
+
       label {
         font-size: 0.8rem !important;
         margin-top: 0.4rem !important;
       }
     }
+
     @media #{$small-only} {
       font-size: 0.65rem;
       width: 98%;
@@ -93,22 +104,27 @@
     }
   }
 
-  .time-slots{
-    .custom_radio_buttons, .custom_slot_selection_link {
+  .time-slots {
+
+    .custom_radio_buttons,
+    .custom_slot_selection_link {
       border: 1px solid;
       padding: .4rem;
       margin-top: 1rem;
       height: 2.7rem;
+
       // border: 1px solid white !important;
       input[type=radio] {
         margin: 0 0 0 0px;
       }
+
       label {
-        @media #{$large-only}{
+        @media #{$large-only} {
           font-size: 0.8rem !important;
           margin-top: 0.4rem !important;
         }
-        @media #{$small-only}{
+
+        @media #{$small-only} {
           margin-left: 0 !important;
           margin-right: 0 !important;
           font-size: 0.6rem !important;
@@ -118,14 +134,15 @@
     }
   }
 
-  .people-count{
+  .people-count {
     padding-left: 0rem !important;
 
-    .people-count-label{
+    .people-count-label {
       margin-top: 1rem !important;
       margin-bottom: 0.5rem;
     }
-    .people-count-input{
+
+    .people-count-input {
       input {
         height: 2.7rem;
         padding: 0 0.5rem;
@@ -134,7 +151,8 @@
         color: white;
         height: 2.7rem !important;
         margin-bottom: 0;
-        @media #{$small-only}{
+
+        @media #{$small-only} {
           width: 97%;
         }
       }
@@ -145,14 +163,17 @@
     .description {
       margin-bottom: 0.2rem;
     }
-    .reason-of-need{
+
+    .reason-of-need {
       font-size: 0.8rem;
       margin-bottom: 0.5rem;
     }
+
     textarea {
-      @media #{$small-only}{
+      @media #{$small-only} {
         max-width: 97%;
       }
+
       padding: 0.3rem 0.5rem;
       background: #002352;
       border: 1px solid $tabbar-menu-icon-color;
@@ -161,44 +182,50 @@
       margin-bottom: 0;
       height: 5rem !important;
     }
-    .remove-text{
+
+    .remove-text {
       position: absolute;
       right: 1%;
-      top: 62%;
-      @media #{$small-only}{
+      top: 61%;
+
+      @media #{$small-only} {
         right: 3%;
         top: 64%;
       }
+
       font-size: 1rem;
       padding: 4.4rem 0.3rem;
       cursor: pointer;
     }
   }
 }
-.col-width-appointment{
-  @media #{$small-only}{
+
+.col-width-appointment {
+  @media #{$small-only} {
     width: 98%;
     margin-left: 0px;
   }
 }
-.success-submit{
+
+.success-submit {
   background: cornflowerblue !important;
   color: white !important;
   text-transform: capitalize !important;
 }
 
-.no-gc-req-error, .no-time-slot-selected-error{
+.no-gc-req-error,
+.no-time-slot-selected-error {
   color: #ee4f4b;
 }
 
-.book_appointment_headers{
-  @media #{$small-only}{
+.book_appointment_headers {
+  @media #{$small-only} {
     width: 96%
   }
 }
 
-.labor_confirmation{
-  @media #{$small-only}{
+.labor_confirmation {
+  @media #{$small-only} {
     font-size: 0.9em;
   }
 }
@@ -207,27 +234,29 @@
   cursor: pointer;
 }
 
-.cancel-section{
+.cancel-section {
   margin-right: unset;
 }
 
 .district-select {
-  #district-select-dropdown{
-    @media #{$small-only}{
+  #district-select-dropdown {
+    @media #{$small-only} {
       margin-left: -5px;
     }
+
     border: 1px solid #8091a9;
     width: 100%;
     background: bottom;
     color: #a3aab6;
     max-width: unset;
   }
+
   .district-label {
     margin-bottom: 0.2rem;
   }
-  .district-label-info{
+
+  .district-label-info {
     font-size: 0.8rem;
     margin-bottom: 0.5rem;
   }
 }
-
