added the verified logo on account detail and my account page

--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -110,7 +110,7 @@
                         {{#if model.user.isEmailVerified}}
                         <div class="small-3 columns verified_icon">
                           <span>
-                            {{fa-icon "check-circle"}}
+                            {{fa-icon "check-circle" prefix="far"}}
                             <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
                           </span>
                         </div>
@@ -140,7 +140,7 @@
                       {{#if model.user.isMobileVerified}}
                       <div class="small-3 columns verified_icon">
                         <span>
-                          {{fa-icon "check-circle"}}
+                          {{fa-icon "check-circle" prefix="far"}}
                           <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
                         </span>
                       </div>
