--- a/app/templates/my_account.hbs
+++ b/app/templates/my_account.hbs
@@ -18,16 +18,16 @@
               </div>
               <div class="detail-row row">
                 {{#if model.organisation}}
-                  <div class="small-12 columns" id="organisation_id">
-                    <div class='row'>
-                      <div class="small-4 columns data-type">
-                        {{t "account.organisation"}}
-                      </div>
-                      <div class="small-8 columns data">
-                        {{model.organisation.nameEn}}
-                      </div>
+                <div class="small-12 columns" id="organisation_id">
+                  <div class='row'>
+                    <div class="small-4 columns data-type">
+                      {{t "account.organisation"}}
+                    </div>
+                    <div class="small-8 columns data">
+                      {{model.organisation.nameEn}}
                     </div>
                   </div>
+                </div>
                 {{/if}}
               </div>
               <div class="detail-row row">
@@ -42,7 +42,7 @@
                 <div class="small-3 columns data-type">{{t "account.position"}}</div>
                 <div class="small-9 columns data">
                   {{#if model.organisationsUser}}
-                    {{model.organisationsUser.position}}
+                  {{model.organisationsUser.position}}
                   {{/if}}
                 </div>
               </div>
@@ -52,19 +52,19 @@
                 </div>
                 <div class="small-9 columns data">
                   {{#if model.user.email}}
-                    <div class="row">
-                      <div class="small-12 medium-12 large-8 columns">
-                        {{model.user.email}}
-                      </div>
-                      {{#if model.user.isEmailVerified}}
-                        <div class="small-3 medium-3 large-4 columns verified_icon">
-                          <div>
-                            {{fa-icon "check-circle-o"}}
-                            <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
-                          </div>
-                        </div>
-                      {{/if}}
+                  <div class="row">
+                    <div class="small-12 medium-12 large-8 columns">
+                      {{model.user.email}}
                     </div>
+                    {{#if model.user.isEmailVerified}}
+                    <div class="small-3 medium-3 large-4 columns verified_icon">
+                      <div>
+                        {{fa-icon "check-circle" prefix="far"}}
+                        <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
+                      </div>
+                    </div>
+                    {{/if}}
+                  </div>
                   {{/if}}
                 </div>
               </div>
@@ -78,14 +78,14 @@
                     <div class="small-12 medium-12 large-6 columns">
                       {{model.user.mobile}}
                     </div>
-                      {{#if model.user.isMobileVerified}}
-                        <div class="small-3 medium-3 large-3 columns verified_icon">
-                          <div>
-                            {{fa-icon "check-circle-o"}}
-                            <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
-                          </div>
-                        </div>
-                      {{/if}}
+                    {{#if model.user.isMobileVerified}}
+                    <div class="small-3 medium-3 large-3 columns verified_icon">
+                      <div>
+                        {{fa-icon "check-circle" prefix="far"}}
+                        <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
+                      </div>
+                    </div>
+                    {{/if}}
                     {{/if}}
                   </div>
                 </div>
@@ -96,14 +96,14 @@
                 </div>
                 <div class="small-7 large-7 columns data">
                   {{#if (is-and model.organisationsUser model.organisationsUser.preferredContactNumber)}}
-                    {{model.organisationsUser.preferredContactNumber}}
+                  {{model.organisationsUser.preferredContactNumber}}
                   {{/if}}
                 </div>
               </div>
             </div>
           </div>
         </div>
-    </section>
+      </section>
     </div>
   </div>
 </div>
