Fix siderbar-menu options when browser height changes

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -81,7 +81,7 @@ $sidebar-width: 7.8rem;
       text-align: center;
       font-size: 0.6rem;
       width: 100%;
-
+      
       .line {
         margin-bottom: 0.8rem;
         padding: 5px;
@@ -104,6 +104,11 @@ $sidebar-width: 7.8rem;
             font-size: 0.6rem !important;
           }
         }
+      }
+      @media only screen and (max-height: 40rem){
+        position: relative;
+        bottom: auto;
+        top: 1rem;
       }
     }
   }
