wrapped angle left to i tag

--- a/app/templates/search_goods.hbs
+++ b/app/templates/search_goods.hbs
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="small-2 medium-1 large-1 columns back_button">
             <div class="back_icon" {{action "back"}}>
-              {{fa-icon 'angle-left'}}
+              <i>{{fa-icon 'angle-left'}}</i>
               <span class="package_back"> {{t "search_goods.done"}}</span>
             </div>
           </div>
