--- a/app/templates/components/language-switcher.hbs
+++ b/app/templates/components/language-switcher.hbs
@@ -1,5 +1,5 @@
 {{#if isEnglish}}
-    <a href="" {{action "setLanguage" 'zh-tw'}} class="selected">{{t "language.zh"}}</a>
+<a href="" {{action "setLanguage" 'zh'}} class="selected">{{t "language.zh"}}</a>
 {{else}}
-    <a href="" {{action "setLanguage" 'en'}} class="selected">{{t "language.en"}}</a>
+<a href="" {{action "setLanguage" 'en'}} class="selected">{{t "language.en"}}</a>
 {{/if}}
