--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -54,19 +54,34 @@
       .contributor {
         height: 100%;
 
-        .static-image {
-          max-width: 100%;
-          max-height: 100%;
-          padding-top: 0.8rem;
-          padding-bottom: 0.2rem;
-        }
-
         &.crossroads {
           width: 30%;
         }
 
         &.jockey_club {
           width: 60%;
+        }
+      }
+
+      .crossroads.static-image {
+        max-width: 100%;
+        max-height: 100%;
+        padding-top: 0.8rem;
+        padding-bottom: 0.2rem;
+      }
+
+      .jockey_club.static-image {
+        max-width: 100%;
+        padding-bottom: .2rem;
+        @media #{$small-only} {
+          max-width: 120%;
+          height: 120%;
+          margin-top: -3%;
+          margin-left: -12%;
+        }
+        @media #{$small-up} {
+          margin-top: -6%;
+          margin-left: -12%;
         }
       }
     }
