--- a/app/templates/components/logo-banner.hbs
+++ b/app/templates/components/logo-banner.hbs
@@ -6,10 +6,10 @@
     </div>
     <div class="contributors logos">
       <div class="contributor crossroads">
-        <img class="static-image" src="assets/images/crossroads_logo.png" />
+        <img class="crossroads static-image" src="assets/images/crossroads_logo.png" />
       </div>
       <div class="contributor jockey_club">
-        <img class="static-image" src="assets/images/jockey_club_logo.png" />
+        <img class="jockey_club static-image" src="assets/images/jockey_club_logo.png" />
       </div>
     </div>
   </div>
