--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -44,9 +44,7 @@
   }
 
   .dropdown-icon {
-    font-size: 0.7rem;
-    z-index: -1;
-    cursor: pointer;
+    display: none;
   }
 
   .dropdown {
