--- a/app/templates/_cart_truck_icon.hbs
+++ b/app/templates/_cart_truck_icon.hbs
@@ -1,4 +1,6 @@
 <i class="fa cart-icon">{{fa-icon 'truck' }}</i>
-<span class="cart unread">
-  <div class="unread_length">{{cartLength}}</div>
-</span>
+<div class="cart unread">
+<div class="wrap">
+  <div class="in">{{cartLength}}</div>
+</div>
+</div>
