GCW-2912 on large device increse the font size of text

--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -4,9 +4,9 @@
     margin-top: 1rem;
   }
   .id-confidential-text{
-    font-size: 0.7rem;
-    @media #{$large-only}{
-      font-size: 0.9rem;
+    font-size: 0.9rem;
+    @media #{$small-only}{
+      font-size: 0.7rem;
     }
   }
 
