--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -38,7 +38,9 @@
         <section
           class="main-section client-information large-10 large-offset-1 medium-12 columns appointment-date small-12">
           {{#unless cart.isEmpty}}
-          {{small-cart-toggle-view}}
+            {{#unless isAppointment}}
+              {{small-cart-toggle-view}}
+            {{/unless}}
           {{/unless}}
 
           <div class="small-12 columns type-of-id-text">
