--- a/app/templates/search_goods.hbs
+++ b/app/templates/search_goods.hbs
@@ -9,7 +9,7 @@
               <span class="package_back"> {{t "search_goods.done"}}</span>
             </div>
           </div>
-          <div class="small-10 large-10 medium-10 columns">
+          <div class="small-10 large-10 medium-10 columns input-field">
             {{focus-textfield
               name="searchText"
               id="searchText"
@@ -20,7 +20,6 @@
             <i class="fa" {{action "clearSearch"}}>{{fa-icon 'times-circle'}}</i>
             {{/if}}
           </div>
-          <div class=" large-1 medium-1 columns"></div>
           <div class="row">
             <div class="small-12 medium-12 columns">
               <label class="form-label search_info">{{t "search_goods.search_info"}}</label>
