used window location replace instead of transitionto

--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -117,7 +117,7 @@
                         {{/if}}
                       </div>
                       {{else}}
-                      {{input value=email value=email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
+                      {{input value=email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
                       {{/if}}
                     </div>
                     <div class="small-12 columns input-error warning_empty">
