--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -42,10 +42,11 @@
   .back_button {
     @media #{$large-only} {
       margin-top: 1.5% !important;
+      width: 12%;
     }
 
     @media #{$medium-only} {
-      width: 15%;
+      width: 22%;
       margin-top: 2% !important;
     }
 
@@ -58,7 +59,7 @@
     }
 
     @media #{$small-only} {
-      width: 22%;
+      width: 24%;
       margin-top: 1.4%;
     }
 
@@ -70,6 +71,11 @@
   }
 
    .input-field {
+
+      @media #{$medium-only} {
+        width: 73%;
+      }
+
       @media #{$small-only} {
         width: 73%;
       }
@@ -158,7 +164,7 @@
     color: #000;
     font-size: 0.9rem;
     cursor: pointer;
-    margin-left: 15%;
+    margin-left: 10%;
 
     @media #{$small-only} {
       margin-left: unset;
