GCW-2984 if any of the dimensions are null hide the size

--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -88,8 +88,8 @@
             {{t "itemdetail.quantity"}}: {{package.quantity}}
           </div>
           <div class="item_details">
-            {{#if package.dimensions}}
-            {{t "itemdetail.size"}}: {{package.dimensions}}
+            {{#if package.isDimensionPresent}}
+              {{t "itemdetail.size"}}: {{package.dimensions}}
             {{/if}}
           </div>
         </p>
