GCW-2994 used hidecart action for find out more item button

--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -47,7 +47,7 @@
     </li>
     {{else}}
     <div align="center" class="cart-message-box">
-      <p>{{t "cart_content.empty_cart"}}<b><a {{action 'displayCart'}}
+      <p>{{t "cart_content.empty_cart"}}<b><a {{action 'hideCart'}}
             class="empty-cart-message">{{t "cart_content.find_items"}}</a></b></p>
     </div>
     {{/each}}
