--- a/app/styles/templates/_item.scss
+++ b/app/styles/templates/_item.scss
@@ -39,6 +39,15 @@
     }
   }
 
+  .item-unavailable {
+    font-size: 14px;
+    margin-top: -1rem;
+    color: #f34d4f;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 1rem;
+  }
+
   .view-image {
     @media #{$small-only} {
       margin-left: -1rem;
