GCW-2985 disable submit-order button in cart when cart is empty

--- a/app/styles/templates/_item.scss
+++ b/app/styles/templates/_item.scss
@@ -42,7 +42,7 @@
   .item-unavailable {
     font-size: 14px;
     margin-top: -1rem;
-    color: #f34d4f;
+    color: $coral-red;
     font-weight: bold;
     display: block;
     margin-bottom: 1rem;
