--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -85,7 +85,7 @@
           {{/if}}
           {{/if}}
           <div class="item_details">
-            {{t "itemdetail.quantity"}}: {{package.onHandQuantity}}
+            {{t "itemdetail.quantity"}}: {{package.availableQuantity}}
           </div>
           <div class="item_details">
             {{#if package.isDimensionPresent}}
