Centering FAQ text

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -11,7 +11,7 @@
     <!-- Introduction -->
     <div class="content">
       <div class="row home_section small light">
-        <div class="small-12 large-10 medium-10 columns introduction">
+        <div class="small-12 large-10 medium-10 columns introduction small-centered">
           {{ t "home.introduction" }}
           {{#link-to "faq"}}
           {{ t "home.faq_text" }}
